[FIX] Fix hotel service repositories