@@ -7,18 +7,30 @@ import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
 
+
 @Service
-public class RoomService {
+public class RoomService
+{
 
-    @Autowired
-    private RoomRepository roomRepository;
+    private final RoomRepository roomRepository;
 
-    public List<Room> getAvailableRooms(Date checkInDate, Date checkOutDate, int numberOfAdults, int numberOfChildren, int numberOfInfants) {
-        List<Room> allRooms = roomRepository.findRoomsByNumberOfGuests(numberOfAdults, numberOfChildren, numberOfInfants);
+    public RoomService(final RoomRepository roomRepository)
+    {
+        this.roomRepository = roomRepository;
+    }
+
+    public List<Room> getAvailableRooms(final Date checkInDate,
+                                        final Date checkOutDate,
+                                        final int numberOfAdults,
+                                        final int numberOfChildren,
+                                        final int numberOfInfants)
+    {
+        final List<Room> allRooms = roomRepository.findRoomsByNumberOfGuests(numberOfAdults, numberOfChildren, numberOfInfants);
         return allRooms.stream()
             .filter(room -> room.getNumberOfPeople() >= numberOfAdults + numberOfChildren + numberOfInfants)
             .filter(room -> room.getReservations().stream()
-                .noneMatch(reservation -> reservation.getFromDate().compareTo(checkInDate) <= 0 && reservation.getToDate().compareTo(checkOutDate) >= 0))
-            .collect(Collectors.toList());
+                .noneMatch(reservation -> reservation.getFromDate().compareTo(checkInDate) <= 0
+                    && reservation.getToDate().compareTo(checkOutDate) >= 0))
+            .toList();
     }
 }
